# real_estate_investment_trusts

./: Anchor.toml  README.md  package.json
programs/real_estate_investment_trusts/: Cargo.toml
programs/real_estate_investment_trusts/src/: error.rs  instructions.rs  lib.rs  state.rs
programs/real_estate_investment_trusts/src/instructions/: buy_investment_trusts.rs  create_token.rs  init.rs  register_investment_trust_scheme.rs  register_investor.rs  sell_investment_trusts.rs  transfer_token.rs
programs/real_estate_investment_trusts/src/state/: configs.rs  investor.rs  market_issuer.rs  real_estate_investment_trust_scheme.rs  reits_type.rs
tests/: real_estate_investment_trusts.ts
